--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,4 @@ bytemuck = { version = "1.4", features = [ "derive" ] }
 regex = "1"
 wgpu_glyph = "0.20"
 chrono = "0.4"
-cpal ="0.15.2"
+rodio = "0.17.1"
